# CryptHub

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.sh
archive/jul-5/tests/cryptui-react-vite-shadcn/: package-lock.json
archive/jul-5/tests/cryptui/src/app/config/: base.py  config.py
archive/jul-5/tests/deprecated/surrealDB_schema/: Dockerfile
deployment/: docker-compose.yaml
meta/: package.json
scripts/setup/: setup.py
src/CryptHub-Platform/: .env.example  README.md
src/CryptHub-Platform/components/CryptDB/: Dockerfile
src/CryptHub-Platform/scripts/: setup.py
src/crypthub/components/CryptComms/: README.md
src/crypthub/components/CryptCore/deployment/: docker-compose.yaml
src/crypthub/components/CryptDB/: README.md
src/crypthub/components/CryptUI/cryptui/: package-lock.json  package.json  vite.config.ts
src/crypthub/components/CryptUI/cryptui/src/app/: asgi.py
src/crypthub/components/CryptUI/cryptui/src/app/config/: base.py  config.py  constants.py
src/crypthub/components/CryptUI/cryptui/src/app/routers/web/: controllers.py
tests/cryptui/src/app/config/: constants.py
tests/cryptui/src/app/database/: db.py
tests/cryptui/src/app/server/: routers.py
tests/deprecated/surrealDB_schema/: sandbox-2024-07-01.surql
