[project]
name = "CryptHub"
version = "0.0.1"
description = "Collab System"
authors = [
    {name = "cam", email = "cammclain@skiff.com"},
]
dependencies = [
    "reflex>=0.4.0",
    "surrealdb>=0.3.1",
    "litestar>=2.9.1",
    "advanced-alchemy>=0.16.0",
    "temporalio>=1.6.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
