[project]
name = "CryptHub"
version = "0.0.1"
description = "Collab System"
authors = [
    {name = "cam", email = "cammclain@skiff.com"},
]
dependencies = [
    "reflex>=0.4.0",
    "surrealdb>=0.3.1",
    "litestar>=2.9.1",
    "advanced-alchemy>=0.16.0",
    "temporalio[opentelemetry]>=1.6.0",
    "asyncio>=3.4.3",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "podman>=5.0.0",
    "openziti>=0.8.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
